src/snapshots/venial__tests__parse_normal_struct_vis-2.snap
---
source: src/tests.rs
assertion_line: 164
expression: struct_type_pub_crate
---
Struct(
    Struct {
        attributes: [],
        vis_marker: Some(
            pub(
                crate,
            ),
        ),
        _struct: Ident(
            struct,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clause: None,
        fields: Named(
            [
                NamedField {
                    attributes: [],
                    vis_marker: None,
                    name: Ident(
                        a,
                    ),
                    _colon: Punct {
                        char: ':',
                        spacing: Alone,
                    },
                    ty: [
                        A,
                    ],
                },
                NamedField {
                    attributes: [],
                    vis_marker: None,
                    name: Ident(
                        b,
                    ),
                    _colon: Punct {
                        char: ':',
                        spacing: Alone,
                    },
                    ty: [
                        B,
                    ],
                },
            ],
        ),
        _semicolon: None,
    },
)
