src/snapshots/venial__tests__parse_normal_struct_vis-3.snap
---
source: src/tests.rs
assertion_line: 121
expression: struct_type_crate
---
Struct(
    Struct {
        name: "Hello",
        fields: Named(
            [
                NamedField {
                    name: "a",
                    ty: TyExpr {
                        tokens: [
                            Ident {
                                sym: A,
                            },
                        ],
                    },
                },
                NamedField {
                    name: "b",
                    ty: TyExpr {
                        tokens: [
                            Ident {
                                sym: B,
                            },
                        ],
                    },
                },
            ],
        ),
    },
)
