src/snapshots/venial__tests__parse_normal_struct_vis.snap
---
source: src/tests.rs
assertion_line: 163
expression: struct_type_pub
---
Struct(
    Struct {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        _struct: Ident(
            struct,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clause: None,
        fields: Named(
            [
                NamedField {
                    attributes: [],
                    vis_marker: None,
                    name: Ident(
                        a,
                    ),
                    _colon: Punct {
                        char: ':',
                        spacing: Alone,
                    },
                    ty: [
                        A,
                    ],
                },
                NamedField {
                    attributes: [],
                    vis_marker: None,
                    name: Ident(
                        b,
                    ),
                    _colon: Punct {
                        char: ':',
                        spacing: Alone,
                    },
                    ty: [
                        B,
                    ],
                },
            ],
        ),
        _semicolon: None,
    },
)
