src/snapshots/venial__tests__parse_normal_struct_where_clause.snap
---
source: src/tests.rs
assertion_line: 365
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: None,
        tk_struct: Ident(
            struct,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clause: Some(
            [
                [
                    A,
                    ":",
                    B,
                ],
                [
                    C,
                    "<",
                    D,
                    ">",
                    ":",
                    E,
                    "<",
                    F,
                    ">",
                ],
            ],
        ),
        fields: Named(
            [
                NamedField {
                    attributes: [],
                    vis_marker: None,
                    name: Ident(
                        a,
                    ),
                    tk_colon: Punct {
                        char: ':',
                        spacing: Alone,
                    },
                    ty: [
                        A,
                    ],
                },
                NamedField {
                    attributes: [],
                    vis_marker: None,
                    name: Ident(
                        b,
                    ),
                    tk_colon: Punct {
                        char: ':',
                        spacing: Alone,
                    },
                    ty: [
                        B,
                    ],
                },
            ],
        ),
        tk_semicolon: None,
    },
)
