src/snapshots/venial__tests__parse_param_attr_fn.snap
---
source: src/tests.rs
assertion_line: 613
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        qualifiers: FunctionQualifiers {
            is_default: false,
            is_const: false,
            is_async: true,
            is_unsafe: false,
            is_extern: false,
            extern_abi: None,
        },
        name: Ident(
            visibility,
        ),
        generic_params: None,
        params: [
            FunctionParameter {
                attributes: [
                    #[
                        my_attr,
                    ],
                ],
                name: Ident(
                    b,
                ),
                ty: [
                    f32,
                ],
            },
        ],
        where_clauses: None,
        return_ty: None,
        body: Some(
            Group {
                delimiter: Brace,
                stream: TokenStream [],
            },
        ),
    },
)
