src/snapshots/venial__tests__parse_param_attr_fn_definitions.snap
---
source: src/tests.rs
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        name: Ident(
            visibility,
        ),
        generic_params: None,
        where_clauses: None,
        params: [
            FunctionParameter {
                attributes: [
                    #[
                        "my_attr",
                    ],
                ],
                name: Ident(
                    b,
                ),
                ty: [
                    "f32",
                ],
            },
        ],
        returns: None,
        abi: "Rust",
        is_unsafe: false,
        is_async: true,
        is_const: false,
    },
)
