src/snapshots/venial__tests__parse_struct_fields_attributes.snap
---
source: src/tests.rs
assertion_line: 262
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clauses: None,
        fields: Named(
            [
                NamedField {
                    attributes: [
                        #[
                            "hello",
                        ],
                    ],
                    vis_marker: None,
                    name: Ident(
                        a,
                    ),
                    ty: [
                        "A",
                    ],
                },
                NamedField {
                    attributes: [],
                    vis_marker: None,
                    name: Ident(
                        b,
                    ),
                    ty: [
                        "B",
                    ],
                },
                NamedField {
                    attributes: [
                        #[
                            "hello",
                        ],
                        #[
                            "hello",
                        ],
                        #[
                            "hello",
                        ],
                    ],
                    vis_marker: None,
                    name: Ident(
                        c,
                    ),
                    ty: [
                        "C",
                    ],
                },
                NamedField {
                    attributes: [],
                    vis_marker: None,
                    name: Ident(
                        d,
                    ),
                    ty: [
                        "D",
                    ],
                },
            ],
        ),
    },
)
