src/snapshots/venial__tests__parse_struct_fields_vis.snap
---
source: src/tests.rs
assertion_line: 167
expression: struct_type
---
Struct(
    Struct {
        name: "Hello",
        fields: Named(
            [
                NamedField {
                    name: "a",
                    ty: [
                        "A",
                    ],
                },
                NamedField {
                    name: "b",
                    ty: [
                        "B",
                    ],
                },
                NamedField {
                    name: "c",
                    ty: [
                        "C",
                    ],
                },
                NamedField {
                    name: "d",
                    ty: [
                        "D",
                    ],
                },
            ],
        ),
    },
)
