src/snapshots/venial__tests__parse_tuple_fields_attributes.snap
---
source: src/tests.rs
assertion_line: 279
expression: struct_type
---
Struct(
    Struct {
        name: "Hello",
        fields: Tuple(
            [
                TupleField {
                    attributes: [
                        #[
                            "hello",
                        ],
                    ],
                    ty: [
                        "A",
                    ],
                },
                TupleField {
                    attributes: [],
                    ty: [
                        "B",
                    ],
                },
                TupleField {
                    attributes: [
                        #[
                            "hello",
                        ],
                        #[
                            "hello",
                        ],
                        #[
                            "hello",
                        ],
                    ],
                    ty: [
                        "C",
                    ],
                },
                TupleField {
                    attributes: [],
                    ty: [
                        "D",
                    ],
                },
            ],
        ),
    },
)
