src/snapshots/venial__tests__parse_tuple_fields_vis.snap
---
source: src/tests.rs
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        tk_struct: Ident(
            struct,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clause: None,
        fields: Tuple(
            [
                TupleField {
                    attributes: [],
                    vis_marker: Some(
                        pub,
                    ),
                    ty: [
                        A,
                    ],
                },
                TupleField {
                    attributes: [],
                    vis_marker: Some(
                        pub(
                            super,
                        ),
                    ),
                    ty: [
                        B,
                    ],
                },
                TupleField {
                    attributes: [],
                    vis_marker: Some(
                        crate,
                    ),
                    ty: [
                        C,
                    ],
                },
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        D,
                    ],
                },
            ],
        ),
        tk_semicolon: Some(
            Punct {
                char: ';',
                spacing: Alone,
            },
        ),
    },
)
