src/snapshots/venial__tests__parse_tuple_struct.snap
---
source: src/tests.rs
assertion_line: 21
expression: struct_type
---
Struct(
    Struct {
        name: "Hello",
        fields: Tuple(
            [
                TupleField {
                    ty: TyExpr {
                        tokens: [
                            Ident {
                                sym: A,
                            },
                        ],
                    },
                },
                TupleField {
                    ty: TyExpr {
                        tokens: [
                            Ident {
                                sym: B,
                            },
                        ],
                    },
                },
            ],
        ),
    },
)
